--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -4,7 +4,7 @@ en:
     about: About
     contribute: Contribute
   index:
-    lead: Open source software is made by people just like you. Learn how to launch and grow your project.
+    lead: An Open Source software for writers
   article:
     table_of_contents: Table of Contents
     back_to_all_guides: Back to all guides
